      be read; thanks to Carl Chenet for the report and patch; Closes: #521496
  * reportbug/ui/gtk2_ui.py
    - added VTE to handle bugscripts and mutt
    - support for spell checking in the bug report editor
    - fix display_failure handling
    - make BTS query tree columns sortable
    - display report message in a dialog at the end, in substitution of pager and stdout
    - ui layout improvements
  * reportbug/ui/urwid_ui.py
    - fix default severity (to normal) in non-multiple menus; Closes: #496969
  * debian/control
    - added suggests for python-vte and python-gnome2-extras (for spell check)
  * debian/copyright, reportbug/ui/gtk2_ui.py
    - bump copyright years
  * man/{querybts.1, reportbug.1, reportbug.conf.5}, conf/reportbug.conf
    - update frontends list, removing newt; thanks to Raphaël Hertzog for the
      report; Closes: #522290
  * bin/querybts
    - do not try to import newt ui as default ui, since it's removed now; use
      text ui instead

 -- Sandro Tosi <morph@debian.org>  Sun, 12 Apr 2009 14:33:23 +0200

reportbug (4.0) unstable; urgency=low

  * Uploading to unstable, since Lenny has been released
  * reportbug/__init__.py
    - updated version number
  * conf/reportbug.conf, debian/rules
    - moved reportbug.conf to conf/ dir
  * share/{handle_bugscript, presubj, reportbug.el, script}, setup.py
    - moved files installed in /usr/share/... into share/ to clean up top level
      directory
  * reportbug/test_hiermatch.py, test/test_hiermatch.py
    - removed reportbug/test_hiermatch.py, partially merget into
      test/test_hiermatch.py
  * bin/*, reportbug/*, reportbug/ui/*, debian/copyright
    - updated copyright information, in particular adding me 
  * reportbug/urlutils.py
    - added a timeout of 1 minute for url retrieving; thanks to Michal Suchanek
      for the report; Closes: 516449
  * debian/{control, rules}
    - switch from python-central to python-support
  * debian/control